Remove admin link from public website

--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                     <ul class="footer-links">
                         <li><a href="#" class="footer-link">Kerjaya</a></li>
                         <li><a href="#" class="footer-link">Media</a></li>
-                        <li><a href="admin.html" class="footer-link">Admin</a></li>
+                        <li><a href="#" class="footer-link">Polisi Privasi</a></li>
                     </ul>
                 </div>
             </div>
